# ignoreit

./: .gitignore  .gitmodules  Cargo.toml  PKGBUILD  README.md  build.rs  build.sh
.github/workflows/: publish.yml  rust.yml
cache/: Cargo.toml
cache/src/: lib.rs  purge.rs
macros/: Cargo.toml
remote/: Cargo.toml
remote/src/: lib.rs
src/: args.rs  cache.rs  clone.rs  commands.rs  config.rs  dirs.rs  icons.rs  macros.rs  main.rs  net.rs  once.rs  progress.rs  template.rs  templates.rs  utils.rs
src/cache/: consts.rs  mod.rs  pick.rs  purge.rs
src/cache/pick/: state.rs  ui.rs
src/commands/: args.rs  error.rs  list.rs  mod.rs  pull.rs  purge.rs
src/lib/: client.rs  consts.rs  macros.rs  mod.rs
src/macros/: mod.rs
src/remote/: consts.rs  mod.rs
src/sys/: mod.rs  online.c
src/templates/: github.rs  mod.rs
src/user/: mod.rs
