[package]
authors = ["Juliette Cordor"]
categories = ["command-line-utilities", "development-tools"]
description = "Quickly load .gitignore templates"
edition = "2021"
keywords = ["git", "ignore", "developer", "tools", "gitignore"]
license = "MIT"
name = "ignoreit"
readme = "README.md"
repository = "https://github.com/jewlexx/ignoreit"
version = "2.4.10"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
directories = "5.0.1"
git2 = "0.19.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
lto = true
strip = true

[features]
default = []
