[package]
authors = ["Juliette Cordor"]
categories = ["command-line-utilities", "development-tools"]
description = "Quickly load .gitignore templates"
edition = "2021"
keywords = ["git", "ignore", "developer", "tools", "gitignore"]
license = "MIT"
name = "ignoreit"
readme = "README.md"
repository = "https://github.com/jewlexx/ignoreit"
version = "2.4.10"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-select"] }
directories = "5.0.1"
fuzzy-matcher = "0.3.7"
git2 = "0.19.0"
indicatif = { version = "0.17.8", features = ["tokio"] }
minus = { version = "5.6.1", features = ["search", "static_output"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true

[features]
default = []
