[package]
authors = ["Juliette Cordor"]
categories = ["command-line-utilities", "development-tools"]
description = "Quickly load .gitignore templates"
edition = "2021"
keywords = ["git", "ignore", "developer", "tools", "gitignore"]
license = "MIT"
name = "ignoreit"
readme = "README.md"
repository = "https://github.com/jewlexx/ignoreit"
version = "2.4.10"

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.3"
clap = { version = "4.5.8", features = ["derive"] }
console = { version = "0.15.8", features = ["windows-console-colors"] }
dialoguer = { version = "0.11.0", features = ["completion", "fuzzy-select"] }
directories = "5.0.1"
fuzzy-matcher = "0.3.7"
git2 = "0.19.0"
include_dir = "0.7.4"
indicatif = { version = "0.17.8", features = ["tokio"] }
itertools = "0.13.0"
minus = { version = "5.6.1", features = ["search", "static_output"] }
parking_lot = "0.12.3"
ratatui = "0.27.0"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
walkdir = "2.5.0"

[profile.release]
lto = true
strip = true

[features]
default = []
