[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
directories = "4.0.1"
git2 = "0.14.2"
lazy_static = "1.4.0"
spinners = "3.1.0"

remote = { path = "../remote" }