[package]
name = "remote"
version = "0.1.0"
edition = "2021"

workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_json = "1.0.79"
spinners = "3.1.0"

macros = { path = "../macros" }